@@ -1,4 +1,4 @@
 <response>
-	<current_version>1.5.0</current_version>
+	<current_version>1.5.1</current_version>
 	<outdated></outdated>
 </response>
